src/test/ui/fully-qualified-type/fully-qualified-type-name4.stderr
error[E0308]: mismatched types
  --> $DIR/fully-qualified-type-name4.rs:6:12
   |
LL | fn bar(x: usize) -> Option<usize> {
   |                     ------------- expected `std::option::Option<usize>` because of return type
LL |     return x;
   |            ^ expected enum `std::option::Option`, found usize
   |
   = note: expected type `std::option::Option<usize>`
              found type `usize`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
